--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CocoaAsyncSocket"]
 	path = CocoaAsyncSocket
 	url = git@github.com:robbiehanson/CocoaAsyncSocket.git
+[submodule "CocoaHTTPServer"]
+	path = CocoaHTTPServer
+	url = git@github.com:robbiehanson/CocoaHTTPServer.git
