--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,19 +15,41 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    runs-on: macOS-latest
+    strategy:
+      matrix:
+        destination: ['platform=iOS Simulator,OS=13.1,name=iPhone 8']
+        xcode: ['/Applications/Xcode_11.1.app/Contents/Developer']
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+          - name: Checkout
+        uses: actions/checkout@v1
+      - name: Bundle Install
+        run: bundle install
+        env:
+          BUNDLE_GITHUB__COM: x-access-token:${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
+      - name: Dependencies
+        run: |
+          carthage bootstrap --no-use-binaries --platform iOS --cache-builds
+          bundle exec pod install
+        env:
+          DEVELOPER_DIR: ${{ matrix.xcode }}
+      - name: Build and test
+        run: bundle exec fastlane scan --destination "${destination}" --scheme "YOUR_APP_SCHEME"
+        env:
+          destination: ${{ matrix.destination }}
+          DEVELOPER_DIR: ${{ matrix.xcode }}
+      - name: Archive Failed Tests artifacts
+        if: failure()
+        uses: actions/upload-artifact@v1
+        with:
+          name: FailureDiff
+          path: YouAppTests/FailureDiffs
+      - name: Releasing
+        run: bundle exec fastlane release
+       # env:
+         # DEVELOPER_DIR: ${{ matrix.xcode }}
+         # ...
+         # YOUR_ENVIRONMENT_VARIABLES_HERE: ${{ secret.XXX }}
+         # ...
