--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,5 +51,5 @@ jobs:
         env:
           DEVELOPER_DIR: ${{ matrix.xcode }}
          # ...
-          YOUR_ENVIRONMENT_VARIABLES_HERE: ${{ secret.XXX }}
+          YOUR_ENVIRONMENT_VARIABLES_HERE: ${{ secrets.XXX }}
          # ...
